--- a/landmatrix/static/css/htmltopdf.css
+++ b/landmatrix/static/css/htmltopdf.css
@@ -1,1 +1,20 @@
 /*  Styling for PDF exports goes here */
+.navbar-main,
+.wrap > .container > .row:first-child,
+footer,
+#collapsebtn_history,
+#collapse_comments form {
+    display: none;
+}
+.collapse {
+    display: block;
+}
+.col-md-9,
+.col-md-3 {
+    display: block;
+    float: left;
+    width: 50%;
+}
+.row {
+    clear: both;
+}
