Better responsivity of YB-fields

--- a/landmatrix/static/css/forms.scss
+++ b/landmatrix/static/css/forms.scss
@@ -6,10 +6,21 @@
 .control-group {
   margin-bottom: 10px;
 }
-.control-group .input-group {
-  margin-top: 10px;
-  width: 30%;
+
+@media (max-width: 992px) {
+  .control-group .input-group {
+    margin-top: 10px;
+    width: 100%;
+  }
 }
+
+@media (min-width: 992px) {
+  .control-group .input-group {
+    margin-top: 10px;
+    width: 30%;
+  }
+}
+
 .control-group .input-group:first-child {
   margin-top: 0;
 }
@@ -197,62 +208,66 @@ a.remove-ybd:hover {
   color: $lm_orange;
 }
 
-.input-group .form-control.year-based {
-  width: 70%;
-}
-.input-group .form-control.year-based-year {
-  width: 30%;
-}
+@media (min-width: 992px) {
 
-.negotiation_status .input-group,
-.implementation_status .input-group {
-  width: 80%;
-}
-.negotiation_status .input-group .year-based,
-.implementation_status .input-group .year-based {
-  width: 40%;
-}
-.negotiation_status .input-group .year-based-year,
-.implementation_status .input-group .year-based-year {
-  width: 30%;
-}
+  .input-group .form-control.year-based {
+    width: 70%;
+  }
 
-.agreement_duration .input-group,
-.total_jobs_current .input-group,
-.total_jobs_current_employees .input-group,
-.total_jobs_current_daily_workers .input-group,
-.domestic_jobs_current .input-group,
-.domestic_jobs_current_employees .input-group,
-.domestic_jobs_current_daily_workers .input-group,
-.foreign_jobs_current .input-group,
-.foreign_jobs_current_employees .input-group,
-.foreign_jobs_current_daily_workers .input-group {
-  width: 80%;
-}
+  .input-group .form-control.year-based-year {
+    width: 30%;
+  }
 
-.agreement_duration .input-group .year-based,
-.total_jobs_current .input-group .year-based,
-.total_jobs_current_employees .input-group .year-based,
-.total_jobs_current_daily_workers .input-group .year-based,
-.domestic_jobs_current .input-group .year-based,
-.domestic_jobs_current_employees .input-group .year-based,
-.domestic_jobs_current_daily_workers .input-group .year-based,
-.foreign_jobs_current .input-group .year-based,
-.foreign_jobs_current_employees .input-group .year-based,
-.foreign_jobs_current_daily_workers .input-group .year-based {
-  width: 62%;
-}
-.agreement_duration .input-group .year-based-year,
-.total_jobs_current .input-group .year-based-year,
-.total_jobs_current_employees .input-group .year-based-year,
-.total_jobs_current_daily_workers .input-group .year-based-year,
-.domestic_jobs_current .input-group .year-based-year,
-.domestic_jobs_current_employees .input-group .year-based-year,
-.domestic_jobs_current_daily_workers .input-group .year-based-year,
-.foreign_jobs_current .input-group .year-based-year,
-.foreign_jobs_current_employees .input-group .year-based-year,
-.foreign_jobs_current_daily_workers .input-group .year-based-year {
-  width: 38%;
+  .negotiation_status .input-group,
+  .implementation_status .input-group {
+    width: 80%;
+  }
+  .negotiation_status .input-group .year-based,
+  .implementation_status .input-group .year-based {
+    width: 40%;
+  }
+  .negotiation_status .input-group .year-based-year,
+  .implementation_status .input-group .year-based-year {
+    width: 30%;
+  }
+
+  .agreement_duration .input-group,
+  .total_jobs_current .input-group,
+  .total_jobs_current_employees .input-group,
+  .total_jobs_current_daily_workers .input-group,
+  .domestic_jobs_current .input-group,
+  .domestic_jobs_current_employees .input-group,
+  .domestic_jobs_current_daily_workers .input-group,
+  .foreign_jobs_current .input-group,
+  .foreign_jobs_current_employees .input-group,
+  .foreign_jobs_current_daily_workers .input-group {
+    width: 80%;
+  }
+
+  .agreement_duration .input-group .year-based,
+  .total_jobs_current .input-group .year-based,
+  .total_jobs_current_employees .input-group .year-based,
+  .total_jobs_current_daily_workers .input-group .year-based,
+  .domestic_jobs_current .input-group .year-based,
+  .domestic_jobs_current_employees .input-group .year-based,
+  .domestic_jobs_current_daily_workers .input-group .year-based,
+  .foreign_jobs_current .input-group .year-based,
+  .foreign_jobs_current_employees .input-group .year-based,
+  .foreign_jobs_current_daily_workers .input-group .year-based {
+    width: 62%;
+  }
+  .agreement_duration .input-group .year-based-year,
+  .total_jobs_current .input-group .year-based-year,
+  .total_jobs_current_employees .input-group .year-based-year,
+  .total_jobs_current_daily_workers .input-group .year-based-year,
+  .domestic_jobs_current .input-group .year-based-year,
+  .domestic_jobs_current_employees .input-group .year-based-year,
+  .domestic_jobs_current_daily_workers .input-group .year-based-year,
+  .foreign_jobs_current .input-group .year-based-year,
+  .foreign_jobs_current_employees .input-group .year-based-year,
+  .foreign_jobs_current_daily_workers .input-group .year-based-year {
+    width: 38%;
+  }
 }
 
 .dynamic-form .remove-form {
