--- a/landmatrix/static/css/map.scss
+++ b/landmatrix/static/css/map.scss
@@ -157,8 +157,10 @@ div.layer-group > a:hover {
 }
 
 #legendstuff {
-    max-height: 75vh;
+    min-width: 20vw;
+    max-height: 50vh;
     overflow-y: auto;
+    margin-bottom: 8px;
 }
 
 .ol-control,
@@ -167,9 +169,9 @@ div.layer-group > a:hover {
     background-color: $lm_offwhite;
 }
 
-#search-location > form > div > i {
-    top: 5px;
-    right: 5px;
+#mapsearch {
+    margin-top: 8px;
+    margin-left: 8px;
 }
 
 #mapVariableSelect {
@@ -177,5 +179,21 @@ div.layer-group > a:hover {
     padding: 0px;
     margin-top: 0px;
     margin-left: -4px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+}
+
+select:not([multiple])#mapVariableSelect {
+    height: 20px !important;
+}
+
+#mapVariableSelect,
+#legendstuff .form-control,
+#legendstuff .input-group-addon {
+    height: 32px !important;
+}
+
+.searchAddon {
+    margin-left: -30px;
+    margin-top: 10px;
+    position: relative;
 }
